modules/wycs/tests/valid/test_058.wycs
assert forall [ {int} xs :
       |xs| > 0 ==> some [ int x : x in xs ]
]