modules/wycs/tests/invalid/test_020.wycs
assert forall [ {(int, int)} xs :
	 |xs| >= 0 ==> |xs| > 0
]
